--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Examplehost-by GaladonX">
+    <meta name="description" content="Examplehost-by ARFN/[Xestria#0002]">
     <meta name="keywords" content="wordpressboss, new, html, one page, bootstrap, new html template, design, creative, onepage, clean, modern">
 
     <!-- PAGE TITLE -->
-    <title>Examplehost-by GaladonX</title>
+    <title>Examplehost-by ARFN/[Xestria#0002]</title>
     <link rel="icon" href="assets/images/favi.png" type="image/gif" sizes="16x16">
     <!-- BOOTSTRAP CSS -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
